@startuml

package "IAM Aggregate" <<Aggregate>> {
  class Session <<Aggregate Root>> {
    id : UUID
    userId : UUID <<Reference>>
    sessionToken : string
    createdAt : datetime
    expiresAt : datetime
    isRevoked : boolean
    isValid() : boolean
  }
}

package "User Aggregate" <<Aggregate>> {
  class User <<Aggregate Root>> {
    id : UUID
    email : Email
    passwordHash : string
    role : Role
  }
  class Role <<Value Object>> {
    CUSTOMER
    MANAGER
    ADMIN
  }
  class Email <<Value Object>> {
    email : string
  }
  class Address <<Entity>> {
    id : UUID
    street : string
    city : string
    postalCode : string
    country : string
  }
}

package "Tea Aggregate" <<Aggregate>> {
  class Tea <<Aggregate Root>> {
    id : UUID
    name : string
    price : Money
    stock : StockLevel
    uploadImage(fileName : string, content : byte[])
    deleteImage(fileName : string)
  }
  class TeaImage <<Entity>> {
    id : UUID
    fileName : string
    filePath : string
    sizeBytes : long
    uploadedAt : datetime
  }
  class Money <<Value Object>> {
    amount : decimal
    currency : string
  }
  class StockLevel <<Value Object>> {
    quantity : int
  }
}

package "Order Aggregate" <<Aggregate>> {
  class Order <<Aggregate Root>> {
    id : UUID
    userId : UUID
    status : OrderStatus
    totalPrice : Money
    createdAt : datetime
    confirm()
    cancel()
    ship()
  }
  class OrderItem <<Entity>> {
    id : UUID
    TeaId : UUID
    quantity : int
    unitPrice : Money
    subtotal()
  }
  class OrderStatus <<Value Object>> {
    PENDING
    CONFIRMED
    SHIPPED
    DELIVERED
    CANCELLED
  }
  class SalesReport <<Entity>> {
    id : UUID
    reportName : string
    startDate : datetime
    endDate : datetime
    generatedAt : datetime
    filePath : string
    compressToZip()
  }
}

package "Payment Aggregate" <<Aggregate>> {
  class Payment <<Aggregate Root>> {
    id : UUID
    orderId : UUID <<Reference>>
    amount : Money
    status : PaymentStatus
    provider : string
    transactionId : string
    process()
  }
  class PaymentStatus <<Value Object>> {
    PENDING
    COMPLETED
    FAILED
    REFUNDED
  }
}

' --- Relationships ---
User "1" --> "1" Role : has >
User "1" --> "1" Email : identified by >
User "1" --> "*" Address : has >

Session "*" ..> "1" User : authenticates >

Tea "1" --> "1" Money : priced at >
Tea "1" --> "1" StockLevel : has >
Tea "1" --> "0..*" TeaImage : has >

Order "1" --> "1" OrderStatus : has >
Order "1" --> "1..*" OrderItem : contains >
SalesReport "1" ..> "*" Order : summarizes >

Order "1" ..> "1" User : placed by >
OrderItem "*" ..> "1" Tea : references >

Payment "*" ..> "1" Order : pays for >
Payment "1" --> "1" PaymentStatus : has >


@enduml